getserver return rolesAssignment, create channel button
