# backend/internal/interface/dto/response/response_membership.go
@@ -7,8 +7,9 @@ import (
 )
 
 type Membership struct {
-	ServerId  uuid.UUID `json:"serverId"`
-	UserId    uuid.UUID `json:"userId"`
-	Nickname  string    `json:"nickname"`
-	CreatedAt time.Time `json:"createdAt"`
+	ServerId      uuid.UUID   `json:"serverId"`
+	UserId        uuid.UUID   `json:"userId"`
+	Nickname      string      `json:"nickname"`
+	CreatedAt     time.Time   `json:"createdAt"`
+	AssignedRoles []uuid.UUID `json:"assignedRoles"`
 }
